# src/models/__init__.py
@@ -10,3 +10,4 @@ from .cards import Card
 from .recipe import Recipe, Situation
 from .cal_link import CalendarLink
 from .kicker_match import KickerMatch
+from .dates import DateIdea, Jahreszeit
