# src/schemas/__init__.py
@@ -7,3 +7,4 @@ from .card import Card, CreateCard
 from .recipe import Recipe, RecipeCreate
 from .mkm import MKMCreate, MKM
 from .kicker_match import KickerMatch, KickerMatchCreate
+from .date import DateIdea, DateIdeaCreate
